--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "snowpack": "^3.8.8",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "utility-types": "^3.10.0"
   },
   "dependencies": {
     "arcsecond": "^4.1.0"
