--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "main": "index.js",
   "scripts": {
     "start": "snowpack dev",
-    "build": "snowpack build"
+    "build": "rollup -c rollup.config.js",
+    "test": "npm run build && jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "snowpack": "^3.8.8",
+    "@rollup/plugin-commonjs": "^22.0.1",
+    "@rollup/plugin-typescript": "^8.3.3",
+    "jest": "^28.1.2",
+    "rollup": "^2.76.0",
+    "tslib": "^2.4.0",
     "typescript": "^4.7.4",
     "utility-types": "^3.10.0"
   },
   "dependencies": {
-    "arcsecond": "^4.1.0"
+    "arcsecond": "^4.1.0",
+    "core-js": "^3.23.4"
   }
 }
