--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "jsonmap",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "snowpack dev",
-    "build": "rollup -c rollup.config.js",
-    "test": "npm run build && jest"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^22.0.1",
-    "@rollup/plugin-typescript": "^8.3.3",
-    "jest": "^28.1.2",
-    "rollup": "^2.76.0",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4",
-    "utility-types": "^3.10.0"
-  },
-  "dependencies": {
-    "arcsecond": "^4.1.0",
-    "core-js": "^3.23.4"
-  }
+    "name": "jsonmap",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "serve": "node",
+        "build": "rollup -c rollup.config.js",
+        "test": "npm run build && jest",
+        "jest:debug": "node --inspect --inspect-brk ./node_modules/jest/bin/jest.js --colors --verbose"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@rollup/plugin-commonjs": "^22.0.1",
+        "@rollup/plugin-typescript": "^8.3.3",
+        "jest": "^28.1.2",
+        "rollup": "^2.76.0",
+        "tslib": "^2.4.0",
+        "typescript": "^4.7.4",
+        "utility-types": "^3.10.0"
+    },
+    "dependencies": {
+        "arcsecond": "^4.1.0",
+        "core-js": "^3.23.4"
+    }
 }
