--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
         ],
         "console": "integratedTerminal",
         "internalConsoleOptions": "neverOpen",
-        "port": 9229
+        "port": 9229,
+        "preLaunchTask": "npm: build"
       }
     ]
   }
