--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
         "serve": "node",
         "build": "rollup -c rollup.config.js",
         "test": "npm run build && jest",
-        "publish:major": "npm version major && npm publish",
-        "publish:minor": "npm version minor && npm publish",
-        "publish:patch": "npm version patch && npm publish"
+        "publish:major": "npm run build && npm version major && npm publish",
+        "publish:minor": "npm run build && npm version minor && npm publish",
+        "publish:patch": "npm run build && npm version patch && npm publish"
     },
     "author": "Artem Mangilev",
     "license": "ISC",
@@ -24,6 +24,7 @@
         "@rollup/plugin-typescript": "^8.3.3",
         "jest": "^28.1.2",
         "rollup": "^2.76.0",
+        "rollup-plugin-dts": "^4.2.2",
         "tslib": "^2.4.0",
         "typescript": "^4.7.4",
         "utility-types": "^3.10.0"
@@ -31,5 +32,10 @@
     "dependencies": {
         "arcsecond": "^4.1.0",
         "core-js": "^3.23.4"
-    }
+    },
+    "types": "./index.d.ts",
+    "files": [
+        "./index.js",
+        "./index.d.ts"
+    ]
 }
