--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "jsonmap-js",
     "version": "0.2.0",
+    "repository": "github:artem-mangilev/jsonmap",
     "description": "Json mapping library written in TypeScript",
     "main": "index.js",
     "scripts": {
